--- a/client/src/components/App/App.module.css
+++ b/client/src/components/App/App.module.css
@@ -1,6 +1,8 @@
 .container {
   width: 100%;
+  height: 100vh;
   padding: 1rem;
+  background-color: rgb(129, 129, 255);
 }
 
 @media (prefers-reduced-motion: no-preference) {
