--- a/client/src/pages/Dashboard/Dashboard.module.css
+++ b/client/src/pages/Dashboard/Dashboard.module.css
@@ -1,4 +1,12 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .title {
   text-align: center;
   font-family: 'Lobster', cursive;
+  color: white;
 }
